[package]
name = "rconcrete"
version = "0.1.0"
authors = ["u296"]
edition = "2021"
rust-version = "1.64.0"
description = "rconcrete is a simple tool for opening an rcon shell to a game server, such as minecraft or factorio"
readme = "README.md"
repository = "https://github.com/u296/rconcrete"
license = "MIT"
keywords = ["rcon", "tool", "cli", "minecraft", "server"]
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5"
serde_json = "1"
thiserror = "1"
regex = "1"
lazy_static = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.clap]
version = "4"
features = ["derive", "cargo"]

[dependencies.rcon]
version = "0.6"
features = ["rt-tokio"]
